--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
           <!-- /.language -->
           <ul class="navigation">
             <li class="navigation__item">
-              <a href="#">Documentation</a>
+              <a
+                href="https://oleksiytymchenko.github.io/home-work-lesson14--Position--/"
+                >Documentation</a
+              >
             </li>
             <!-- /.navigation__item -->
             <li class="navigation__item">
