--- a/index.html
+++ b/index.html
@@ -79,60 +79,85 @@
         <section class="section">
           <h2>Who’s using</h2>
           <ul class="brand_list">
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
-            <li class="brand_list__item">
-              <div class="brand_list__item__front"></div>
-              <!-- /.brand_list__item__front -->
-              <div class="brand_list__item__back"></div>
-              <!-- /.brand_list__item__back -->
+            <li class="brand_list__item__box">
+              <div class="brand_list__item">
+                <div class="brand_list__item__front"></div>
+                <!-- /.brand_list__item__front -->
+                <div class="brand_list__item__back"></div>
+                <!-- /.brand_list__item__back -->
+              </div>
+              <!-- /.brand_list__item -->
             </li>
             <!-- /.brand_list__item -->
           </ul>
